--- a/Assignments/a2/calendar/Makefile
+++ b/Assignments/a2/calendar/Makefile
@@ -1,7 +1,7 @@
 OPT = -Wall
 
-cal:	main.o Date.o Time.o Event.o Calendar.o
-	g++ $(OPT) -o cal main.o Date.o Time.o Event.o Calendar.o
+cal:	main.o Date.o Time.o Event.o Calendar.o Control.o View.o List.o
+	g++ $(OPT) -o cal main.o Time.o Date.o Event.o Calendar.o List.o Control.o View.o 
 
 main.o:	main.cc Date.h
 	g++ $(OPT) -c main.cc
@@ -17,6 +17,15 @@ Event.o: Event.cc Event.h
 
 Calendar.o: Calendar.cc Calendar.h
 	g++ $(OPT) -c Calendar.cc
+
+Control.o: Control.cc Control.h
+	g++ $(OPT) -c Control.cc
+
+View.o: View.cc View.h
+	g++ $(OPT) -c View.cc
+
+List.o: List.cc List.h
+	g++ $(OPT) -c List.cc
 
 clean:
 	rm -f *.o cal
