--- a/Assignments/a2/.vscode/settings.json
+++ b/Assignments/a2/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "*.java": "java",
-        "new": "cpp"
+        "new": "cpp",
+        "iosfwd": "cpp",
+        "iostream": "cpp",
+        "iomanip": "cpp"
     }
 }
